// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders Button 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onRippleAnimation={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  rippleCentered={false}
  rippleColor="#2196f3"
  rippleDuration={400}
  rippleFades={true}
  rippleOpacity={0.3}
  rippleSequential={false}
  rippleSize={0}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "borderRadius": 4,
      "color": "#2196f3",
      "flex": 1,
      "height": 36,
      "justifyContent": "center",
      "minHeight": 36,
      "minWidth": 64,
      "padding": 8,
      "width": "auto",
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#2196f3",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 1.25,
      }
    }
  >
    CLICK ME
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 4,
        },
      ]
    }
  />
</View>
`;

exports[`it renders Button fullwidth 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onRippleAnimation={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  rippleCentered={false}
  rippleColor="#2196f3"
  rippleDuration={400}
  rippleFades={true}
  rippleOpacity={0.3}
  rippleSequential={false}
  rippleSize={0}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "borderRadius": 4,
      "color": "#2196f3",
      "flex": 1,
      "height": 36,
      "justifyContent": "center",
      "minHeight": 36,
      "minWidth": 64,
      "padding": 8,
      "width": "auto",
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#2196f3",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 1.25,
      }
    }
  >
    CLICK ME
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 4,
        },
      ]
    }
  />
</View>
`;

exports[`it renders loading Button 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onRippleAnimation={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  rippleCentered={false}
  rippleColor="#2196f3"
  rippleDuration={400}
  rippleFades={true}
  rippleOpacity={0.3}
  rippleSequential={false}
  rippleSize={0}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "borderRadius": 4,
      "color": "#2196f3",
      "flex": 1,
      "height": 36,
      "justifyContent": "center",
      "minHeight": 36,
      "minWidth": 64,
      "padding": 8,
      "width": "auto",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#2196f3"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "textAlign": "center",
        "width": 16,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 4,
        },
      ]
    }
  />
</View>
`;

exports[`it renders outlined Button 1`] = `
<View
  accessible={true}
  onLayout={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onRippleAnimation={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="box-only"
  rippleCentered={false}
  rippleColor="#2196f3"
  rippleDuration={400}
  rippleFades={true}
  rippleOpacity={0.3}
  rippleSequential={false}
  rippleSize={0}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "transparent",
      "borderColor": "rgba(0,0,0,.29)",
      "borderRadius": 4,
      "borderWidth": 0.5,
      "color": "#2196f3",
      "flex": 1,
      "height": 36,
      "justifyContent": "center",
      "minHeight": 36,
      "minWidth": 64,
      "padding": 8,
      "paddingHorizontal": 16,
      "width": "auto",
    }
  }
>
  <Text
    numberOfLines={1}
    style={
      Object {
        "color": "#2196f3",
        "fontSize": 14,
        "fontWeight": "500",
        "letterSpacing": 1.25,
      }
    }
  >
    CLICK ME
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "borderRadius": 4,
        },
      ]
    }
  />
</View>
`;
